Fix wall border overflow

--- a/app/scss/_wall.scss
+++ b/app/scss/_wall.scss
@@ -1,6 +1,6 @@
 .text-bottom {
   display: none;
-  width: 100%;
+  width: 97%;
   text-align: center;
   @include centre(y);
   color: white;
